# mis-eventos-api

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/actions/setup-backend/: action.yml
.github/workflows/: backend-ci.yml  docker-validation.yml  security-checks.yml
alembic/: env.py
alembic/versions/: 20260523_0001_create_users_table.py  20260524_0002_create_events_table.py  20260524_0003_create_sessions_table.py  20260524_0004_create_event_registrations_table.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py
app/api/v1/dependencies/: __init__.py  ai.py  auth.py  events.py  registrations.py  sessions.py
app/api/v1/routes/: __init__.py  ai.py  auth.py  event_registrations.py  event_sessions.py  events.py  health.py  me_events.py  sessions.py
app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  migrations.py  security.py
app/models/: __init__.py  event.py  event_registration.py  session.py  user.py
app/providers/: __init__.py
app/providers/ai/: __init__.py  base.py  errors.py  factory.py  mock.py  openai.py  prompts.py
app/repositories/: __init__.py  base.py  event_repository.py  registration_repository.py  session_repository.py  user_repository.py
app/schemas/: __init__.py  ai.py  common.py  event.py  registration.py  session.py  user.py
app/services/: __init__.py  ai_rate_limiter.py  ai_service.py  event_service.py  registration_service.py  session_service.py  user_service.py
app/tests/: conftest.py  constants.py
app/tests/factories/: __init__.py  ai_factory.py  event_factory.py  session_factory.py  user_factory.py
app/tests/fixtures/: __init__.py  ai.py  client.py  database.py  events.py  registrations.py  sessions.py  users.py
app/tests/integration/ai/: test_ai_endpoint.py
app/tests/integration/auth/: test_auth.py
app/tests/integration/events/: test_events.py
app/tests/integration/flows/: test_ai_flow.py  test_e2e_flows.py
app/tests/integration/registrations/: test_registrations.py
app/tests/integration/sessions/: test_sessions.py
app/tests/unit/ai/: test_ai_factory.py  test_ai_schemas.py  test_ai_service.py  test_mock_provider.py  test_openai_provider.py
app/tests/unit/auth/: test_password_policy.py  test_security.py  (+1 more)
app/tests/utils/: __init__.py  assertions.py
app/utils/: event_rules.py  password_policy.py  sensitive_data.py  session_rules.py  text_sanitize.py  validation_errors.py
scripts/: start-production.sh
(+5 files in other folders)
