[project]
name = "mis-eventos-backend"
version = "0.1.0"
description = "Backend enterprise para gestión de eventos — Mis Eventos"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mis Eventos Team" }]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1,<5.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "greenlet>=3.1.0",
    "openai>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"app/tests/**" = ["ARG", "PLR2004", "E501", "E402", "PLC0415"]
"app/api/**" = ["B008"]
"app/services/ai_service.py" = ["PLW0602", "PLW0603"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: pruebas unitarias sin base de datos",
    "integration: pruebas de integración con PostgreSQL (asyncpg)",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/tests/*",
    "app/**/__init__.py",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pip-audit>=2.7.0",
]

[tool.coverage.xml]
output = "coverage.xml"
